--- a/src/components/VolumeSlider/VolumeSlider.css
+++ b/src/components/VolumeSlider/VolumeSlider.css
@@ -8,6 +8,12 @@
   height: 20px;
 
   margin: 0 16px;
+  /* touch-action: pan-x; */
+
+  @media screen and (min-width: 768px) {
+    width: 300px;
+    height: 30px;
+  }
 }
 
 .SliderTrack {
@@ -16,6 +22,10 @@
   flex-grow: 1;
   border-radius: 9999px;
   height: 3px;
+
+  @media screen and (min-width: 768px) {
+    height: 5px;
+  }
 }
 
 .SliderRange {
@@ -32,9 +42,16 @@
   background-color: white;
   box-shadow: 0 2px 10px hsl(0 0% 0% / 0.141);
   border-radius: 10px;
+
+  @media screen and (min-width: 768px) {
+    width: 30px;
+    height: 30px;
+    border-radius: 20px;
+  }
 }
-.SliderThumb:hover {
-  background-color: hsl(277 99.6% 46.5% / 0.055);
+.SliderThumb:hover,
+.SliderThumb:active {
+  background-color: tomato;
 }
 .SliderThumb:focus {
   outline: none;
