--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   font-family: 'Poppins', sans-serif;
   /* position: relative; */
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   overflow-y: hidden;
 }
 
