--- a/src/components/VolumeSlider/VolumeSlider.css
+++ b/src/components/VolumeSlider/VolumeSlider.css
@@ -42,6 +42,7 @@
   background-color: white;
   box-shadow: 0 2px 10px hsl(0 0% 0% / 0.141);
   border-radius: 10px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 
   @media screen and (min-width: 768px) {
     width: 30px;
