--- a/src/components/Main/animation.css
+++ b/src/components/Main/animation.css
@@ -1,20 +1,28 @@
-@-webkit-keyframes flip-horizontal-bottom {
+@-webkit-keyframes flip-scale-down-ver {
   0% {
-    -webkit-transform: rotateX(0);
-    transform: rotateX(0);
+    -webkit-transform: scale(1) rotateY(0);
+    transform: scale(1) rotateY(0);
+  }
+  50% {
+    -webkit-transform: scale(0.4) rotateY(-90deg);
+    transform: scale(0.4) rotateY(-90deg);
   }
   100% {
-    -webkit-transform: rotateX(-180deg);
-    transform: rotateX(-180deg);
+    -webkit-transform: scale(1) rotateY(-360deg);
+    transform: scale(1) rotateY(-360deg);
   }
 }
-@keyframes flip-horizontal-bottom {
+@keyframes flip-scale-down-ver {
   0% {
-    -webkit-transform: rotateX(0);
-    transform: rotateX(0);
+    -webkit-transform: scale(1) rotateY(0);
+    transform: scale(1) rotateY(0);
+  }
+  50% {
+    -webkit-transform: scale(0.4) rotateY(-90deg);
+    transform: scale(0.4) rotateY(-90deg);
   }
   100% {
-    -webkit-transform: rotateX(-180deg);
-    transform: rotateX(-180deg);
+    -webkit-transform: scale(1) rotateY(-360deg);
+    transform: scale(1) rotateY(-360deg);
   }
 }
