--- a/src/components/Main/animation.css
+++ b/src/components/Main/animation.css
@@ -1,28 +1,28 @@
-@-webkit-keyframes flip-scale-down-ver {
+@-webkit-keyframes rotate-tl {
   0% {
-    -webkit-transform: scale(1) rotateY(0);
-    transform: scale(1) rotateY(0);
-  }
-  50% {
-    -webkit-transform: scale(0.4) rotateY(-90deg);
-    transform: scale(0.4) rotateY(-90deg);
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
   }
   100% {
-    -webkit-transform: scale(1) rotateY(-360deg);
-    transform: scale(1) rotateY(-360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
   }
 }
-@keyframes flip-scale-down-ver {
+@keyframes rotate-tl {
   0% {
-    -webkit-transform: scale(1) rotateY(0);
-    transform: scale(1) rotateY(0);
-  }
-  50% {
-    -webkit-transform: scale(0.4) rotateY(-90deg);
-    transform: scale(0.4) rotateY(-90deg);
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
   }
   100% {
-    -webkit-transform: scale(1) rotateY(-360deg);
-    transform: scale(1) rotateY(-360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
   }
 }
